# OpenGL-Starter

./: README.md
OpenGL Starter/: CMakeLists.txt  build.bat
OpenGL Starter/assets/: peel.frag  peel.vert  screen_quad.frag  screen_quad.vert  test.frag  test.vert
OpenGL Starter/inc/: pch.h
OpenGL Starter/inc/core/: asset_loader.h  camera.h  material.h  mesh.h  renderer.h  shader.h  texture.h  window.h
OpenGL Starter/inc/predef/: primitives.h  shader_presets.h
OpenGL Starter/inc/utils/: math_helpers.h
OpenGL Starter/src/: main.cpp
OpenGL Starter/src/core/: asset_loader.cpp  camera.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
